<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_Connection"
            android:icon="@drawable/ic_bluetooth"
            android:title="@string/menu_Connection" />
        <item
            android:id="@+id/nav_Info"
            android:icon="@drawable/ic_info"
            android:title="@string/menu_Info" />
        <item
            android:id="@+id/nav_Traffic"
            android:icon="@drawable/ic_traffic"
            android:title="@string/menu_Traffic" />
        <item
            android:id="@+id/nav_Solarenergy"
            android:icon="@drawable/ic_battery"
            android:title="@string/menu_SolarEnergy" />

    </group>
</menu>
