<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.solarenergy.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home">

        <action
            android:id="@+id/action_HomeFragment_to_HomeSecondFragment"
            app:destination="@id/nav_Connection" />
    </fragment>
    <fragment
        android:id="@+id/nav_Connection"
        android:name="com.example.solarenergy.ui.Connection.ConnectionFragment"
        android:label="@string/menu_Connection"
        tools:layout="@layout/fragment_connection">
        <action
            android:id="@+id/action_HomeSecondFragment_to_HomeFragment"
            app:destination="@id/nav_home" />

        <argument
            android:name="myArg"
            app:argType="string" />
    </fragment>



    <fragment
        android:id="@+id/nav_Info"
        android:name="com.example.solarenergy.ui.Info.InfoFragment"
        android:label="@string/menu_Info"
        tools:layout="@layout/fragment_info" />
    <fragment
        android:id="@+id/nav_Traffic"
        android:name="com.example.solarenergy.ui.traffic.trafficFragment"
        android:label="@string/menu_Traffic"
        tools:layout="@layout/fragment_traffic" />
    <fragment
        android:id="@+id/nav_Solarenergy"
        android:name="com.example.solarenergy.ui.Solar.SolarFragment"
        android:label="@string/menu_SolarEnergy"
        tools:layout="@layout/fragment_solarenergy" />
</navigation>